Flood extent function
Flood extent function

--- a/react_image_collection_otsu_threshold.ipynb
+++ b/react_image_collection_otsu_threshold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,9 @@
     "# !pip install folium\n",
     "# !pip install geemap\n",
     "# !pip install plotly\n",
+    "# !pip install pandas\n",
+    "# !pip install altair\n",
+    "# !pip install openpyxl\n",
     "\n",
     "import hydrafloods as hf\n",
     "import ee, geemap\n",
@@ -19,6 +22,9 @@
     "from eepackages import assets\n",
     "from eepackages import utils\n",
     "import urllib.request\n",
+    "import pandas as pd\n",
+    "import altair as alt\n",
+    "import openpyxl\n",
     "\n",
     "#ee.Authenticate()\n",
     "ee.Initialize()"
@@ -26,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +70,6 @@
     "    return col\n",
     "\n",
     "def hydroperiod(col, region, band):\n",
-    "\n",
     "    def applyOtsu(img):\n",
     "        otsu = hf.edge_otsu(\n",
     "            img,\n",
@@ -73,7 +78,6 @@
     "            thresh_no_data=-0.2,\n",
     "            # edge_buffer=300,\n",
     "            invert=True)\n",
-    "        \n",
     "        return img.addBands(otsu.select('water'))\n",
     "    \n",
     "    otsu_col       = col.map(applyOtsu).select('water')\n",
@@ -89,7 +93,6 @@
     "    frequency = overall.expression('water_sum/water_count',bands_for_expressions).rename(\"frequency\")\n",
     "    return otsu_col_sum, otsu_col_count, frequency\n",
     "\n",
-    "\n",
     "def annualotsu(col_mean, region, band):\n",
     "    def applyOtsu(img):\n",
     "        otsu = hf.edge_otsu(\n",
@@ -100,29 +103,56 @@
     "            # edge_buffer=300,\n",
     "            invert=True)\n",
     "        return otsu\n",
-    "    \n",
     "    otsu_col        = applyOtsu(col_mean)\n",
     "    otsu_col_annual = otsu_col.rename('water_annual').select('water_annual')\n",
-    "    return otsu_col_annual \n",
+    "    otsu_col_annual_nonzero = otsu_col_annual.where(otsu_col_annual.eq(0), 0.0000000001)\n",
+    "    return otsu_col_annual_nonzero\n",
     "\n",
-    "def erotionacretion(region,startyear,endyear,band): \n",
-    "    images_annual_otsu = []\n",
+    "def plotfloodextent(df, outputdir):\n",
+    "    dff = df.reset_index()\n",
+    "    chart = alt.Chart(dff).mark_bar(size=1).encode(\n",
+    "        x='Year:T',\n",
+    "        y='Pixels:Q',\n",
+    "        color=alt.Color(\n",
+    "            'Pixels:Q', scale=alt.Scale(scheme='redyellowgreen', domain=(300000, 350000))),\n",
+    "        tooltip=[\n",
+    "            alt.Tooltip('Year:T', title='Date'),\n",
+    "            alt.Tooltip('Pixels:Q', title='Pixels')\n",
+    "        ]).properties(width=600, height=300)\n",
+    "    chart.save(outputdir + \"/\" + \"v4\" + \"_GPP_daily.html\")\n",
+    "    return \n",
+    "\n",
+    "def floodextension(region,startyear,endyear,band,outputdir, id):\n",
+    "    image_year = []\n",
+    "    pixel_image_list = []\n",
     "    for yr in range(startyear,endyear+1):\n",
     "        ts = ee.Date.fromYMD(yr, 1, 1)\n",
     "        te = ts.advance(1, 'year')\n",
     "        col_filtered = getcollection(ts, te, region).select(band).mean()\n",
-    "        globals()['annualotsu_%s' %str(yr)] = annualotsu(col_filtered, region, band)\n",
-    "        images_annual_otsu.append(globals()['annualotsu_%s' %str(yr)])\n",
-    "    return images_annual_otsu\n",
+    "        for band in col_filtered.bandNames().getInfo():\n",
+    "            print(band)\n",
+    "        print(yr)\n",
+    "        annual_otsu = annualotsu(col_filtered, region, band)\n",
+    "        name_file_flood_extent = \"annual_otsu_flood_extent_\"+ str(yr+1) +'_'+ id\n",
+    "        downloadurl( annual_otsu, name_file_flood_extent,'water_annual', outputdir,region)\n",
     "\n",
+    "        reducer     = ee.Reducer.sum()\n",
+    "        pixels_sum  = annual_otsu.select(['water_annual']).reduceRegion(reducer= reducer,geometry=region,scale=10,maxPixels=1e9).getInfo()\n",
+    "        image_year.append(str(yr)+'-01-01')\n",
+    "        pixel_image_list.append(pixels_sum['water_annual'])\n",
+    "    table    = {'Year':image_year,'Pixels':pixel_image_list}\n",
+    "    df = pd.DataFrame(table).set_index('Year')\n",
+    "    # df.to_excel(outputdir + \"/\" + id + \"_flood_extend.xlsx\") \n",
+    "    df.to_csv(outputdir + \"/\" + id + \"_flood_extend.csv\") \n",
+    "    plotfloodextent(df, outputdir)\n",
+    "    return df\n",
     "\n",
-    "def downloadurl(img, name_file,band, outputdir):\n",
+    "def downloadurl(img, name_file,band, outputdir, region):\n",
     "    file_path_tiff = outputdir + name_file + \".tiff\"\n",
     "    urlD = img.getDownloadUrl({'bands' : band,\n",
     "                                    'region': region,\n",
     "                                    'scale' : 30,\n",
     "                                    'format': 'GEO_TIFF'})\n",
-    "    \n",
     "    try:\n",
     "        urllib.request.urlretrieve(urlD, file_path_tiff)\n",
     "        print(f\"{name_file} has been downloaded successfully.\")\n",
@@ -130,20 +160,33 @@
     "        print(f\"Failed to download {name_file}.\")\n",
     "    return  \n",
     "\n",
-    "\n",
-    "def downloaderotionacretion(region,startyear,endyear,outputdir, id, band): \n",
-    "    list_images = erotionacretion(region,startyear,endyear,band)\n",
-    "    # image_collection = ee.ImageCollection.fromImages(list_images)\n",
+    "def erotionacretion(region,startyear,endyear,band,outputdir, id): \n",
+    "    images_annual_otsu = []\n",
     "    for yr in range(startyear,endyear+1):\n",
-    "        for ind in range(len(list_images)-1): \n",
-    "            diff_image = list_images[ind+1].subtract(list_images[ind])\n",
-    "            diff_image = diff_image.rename('water_difference').select('water_difference')\n",
-    "            name_file_frequency = \"erosion_accretion_\"+ str(yr) +'_'+ id\n",
-    "            \n",
-    "            downloadurl(diff_image, name_file_frequency,'water_difference', outputdir)\n",
-    "    return\n",
+    "        ts = ee.Date.fromYMD(yr, 1, 1)\n",
+    "        te = ts.advance(1, 'year')\n",
+    "        col_filtered = getcollection(ts, te, region).select(band).mean()\n",
+    "        for band in col_filtered.bandNames().getInfo():\n",
+    "            print(band)\n",
+    "        globals()['annualotsu_%s' %str(yr)] = annualotsu(col_filtered, region, band)\n",
     "\n",
-    "def downloadhydroperiodperyear(region,startyear,endyear,outputdir, id, band):  \n",
+    "        name_file_erotion = \"annual_otsu_erosion_accretion_\"+ str(yr+1) +'_'+ id\n",
+    "        downloadurl(globals()['annualotsu_%s' %str(yr)], name_file_erotion,'water_annual', outputdir,region)\n",
+    "\n",
+    "        images_annual_otsu.append(globals()['annualotsu_%s' %str(yr)])\n",
+    "\n",
+    "    for yr, ind in zip(range(startyear,endyear),range(len(images_annual_otsu)-1)):\n",
+    "        print(yr+1) \n",
+    "        diff_image = images_annual_otsu[ind+1].subtract(images_annual_otsu[ind])\n",
+    "        for band in diff_image.bandNames().getInfo():\n",
+    "            print(band)\n",
+    "        diff_image = diff_image.rename('water_difference').select('water_difference')\n",
+    "        name_file_erotion = \"erosion_accretion_\"+ str(yr+1) +'_'+ id\n",
+    "        downloadurl(diff_image, name_file_erotion,'water_difference', outputdir,region)\n",
+    "    return images_annual_otsu\n",
+    "\n",
+    "\n",
+    "def downloadhydroperiodperyear(region,startyear,endyear,outputdir, band, id):  \n",
     "    for yr in range(startyear,endyear+1):\n",
     "        ts = ee.Date.fromYMD(yr, 1, 1)\n",
     "        te = ts.advance(1, 'year')\n",
@@ -155,17 +198,15 @@
     "        name_file_sum       = \"sum_maps_\"+ str(yr) +'_'+ id\n",
     "        name_file_count     = \"count_maps_\"+ str(yr) +'_'+ id\n",
     "\n",
-    "\n",
-    "        \n",
-    "        downloadurl(frequency, name_file_frequency,'frequency',outputdir)\n",
-    "        downloadurl(sum,name_file_sum,'water_sum',outputdir)\n",
-    "        downloadurl(count, name_file_count,'water_count',outputdir)\n",
+    "        downloadurl(frequency, name_file_frequency,'frequency',outputdir,region)\n",
+    "        downloadurl(sum,name_file_sum,'water_sum',outputdir,region)\n",
+    "        downloadurl(count, name_file_count,'water_count',outputdir,region)\n",
     "    return\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,34 +217,302 @@
     "\n",
     "coords = data['features'][0]['geometry']['coordinates']\n",
     "region = ee.Geometry.Polygon(coords[0])\n",
-    "\n",
     "# region    = ee.Geometry.Rectangle([137.767181,34.641682,137.842026,34.878045])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "erosion_accretion_2021_v1 has been downloaded successfully.\n",
-      "erosion_accretion_2022_v1 has been downloaded successfully.\n"
+      "163\n",
+      "frequency_maps_2019_v4 has been downloaded successfully.\n",
+      "sum_maps_2019_v4 has been downloaded successfully.\n",
+      "count_maps_2019_v4 has been downloaded successfully.\n",
+      "160\n",
+      "frequency_maps_2020_v4 has been downloaded successfully.\n",
+      "sum_maps_2020_v4 has been downloaded successfully.\n",
+      "count_maps_2020_v4 has been downloaded successfully.\n",
+      "mndwi\n",
+      "2019\n"
      ]
     }
    ],
    "source": [
-    "start     = 2021\n",
-    "end       = 2022\n",
-    "band      ='ndwi'\n",
-    "\n",
+    "start     = 2019\n",
+    "end       = 2020\n",
+    "band      ='mndwi'\n",
     "outputdir = 'C:/Users/fuentesm/CISNE/REACT/Maps/'\n",
     "\n",
-    "# downloadhydroperiodperyear(region,start,end,outputdir, 'v1', band)\n",
-    "downloaderotionacretion(region,start,end,outputdir, 'v1', band)\n"
+    "downloadhydroperiodperyear(region,start,end,outputdir, band, 'v4')\n",
+    "# result = erotionacretion(region,start,end,band,outputdir, 'v4')\n",
+    "df     = floodextension(region,start,end,band,outputdir, 'v4')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pixels</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01</th>\n",
+       "      <td>204148.058294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01</th>\n",
+       "      <td>216627.998223</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Pixels\n",
+       "Year                     \n",
+       "2019-01-01  204148.058294\n",
+       "2020-01-01  216627.998223"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dff = df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Pixels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>204148.058294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>216627.998223</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Year         Pixels\n",
+       "0  2019-01-01  204148.058294\n",
+       "1  2020-01-01  216627.998223"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id=\"altair-viz-13ab3f0ee18049fa9fd4c70108188585\"></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
+       "  (function(spec, embedOpt){\n",
+       "    let outputDiv = document.currentScript.previousElementSibling;\n",
+       "    if (outputDiv.id !== \"altair-viz-13ab3f0ee18049fa9fd4c70108188585\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-13ab3f0ee18049fa9fd4c70108188585\");\n",
+       "    }\n",
+       "    const paths = {\n",
+       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
+       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.17.0?noext\",\n",
+       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
+       "    };\n",
+       "\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
+       "    }\n",
+       "\n",
+       "    function showError(err) {\n",
+       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+       "      throw err;\n",
+       "    }\n",
+       "\n",
+       "    function displayChart(vegaEmbed) {\n",
+       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+       "    }\n",
+       "\n",
+       "    if(typeof define === \"function\" && define.amd) {\n",
+       "      requirejs.config({paths});\n",
+       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else {\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
+       "        .catch(showError)\n",
+       "        .then(() => displayChart(vegaEmbed));\n",
+       "    }\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-5723e7ff91965a14aabb5c69aced97b9\"}, \"mark\": {\"type\": \"bar\", \"size\": 1}, \"encoding\": {\"color\": {\"field\": \"Pixels\", \"scale\": {\"domain\": [300000, 350000], \"scheme\": \"redyellowgreen\"}, \"type\": \"quantitative\"}, \"tooltip\": [{\"field\": \"Year\", \"title\": \"Date\", \"type\": \"temporal\"}, {\"field\": \"Pixels\", \"title\": \"Pixels\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"Year\", \"type\": \"temporal\"}, \"y\": {\"field\": \"Pixels\", \"type\": \"quantitative\"}}, \"height\": 300, \"width\": 600, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-5723e7ff91965a14aabb5c69aced97b9\": [{\"Year\": \"2019-01-01\", \"Pixels\": 204148.05829420884}, {\"Year\": \"2020-01-01\", \"Pixels\": 216627.99822268513}]}}, {\"mode\": \"vega-lite\"});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "alt.Chart(...)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dff = df.reset_index()\n",
+    "chart = alt.Chart(dff).mark_bar(size=1).encode(\n",
+    "    x='Year:T',\n",
+    "    y='Pixels:Q',\n",
+    "    color=alt.Color(\n",
+    "        'Pixels:Q', scale=alt.Scale(scheme='redyellowgreen', domain=(300000, 350000))),\n",
+    "    tooltip=[\n",
+    "        alt.Tooltip('Year:T', title='Date'),\n",
+    "        alt.Tooltip('Pixels:Q', title='Pixels')\n",
+    "    ]).properties(width=600, height=300)\n",
+    "\n",
+    "chart.save(outputdir + \"/\" + \"v4\" + \"_GPP_daily.html\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
