Tool EO_tools.py require to be tested
Tool EO_tools.py  require to be tested

--- a/react_image_collection_otsu_threshold.ipynb
+++ b/react_image_collection_otsu_threshold.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,97 +222,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "163\n",
-      "frequency_maps_2019_v4 has been downloaded successfully.\n",
-      "sum_maps_2019_v4 has been downloaded successfully.\n",
-      "count_maps_2019_v4 has been downloaded successfully.\n",
-      "160\n",
-      "frequency_maps_2020_v4 has been downloaded successfully.\n",
-      "sum_maps_2020_v4 has been downloaded successfully.\n",
-      "count_maps_2020_v4 has been downloaded successfully.\n",
+      "10\n",
+      "frequency_maps_2000_v4 has been downloaded successfully.\n",
+      "sum_maps_2000_v4 has been downloaded successfully.\n",
+      "count_maps_2000_v4 has been downloaded successfully.\n",
+      "6\n",
+      "frequency_maps_2001_v4 has been downloaded successfully.\n",
+      "sum_maps_2001_v4 has been downloaded successfully.\n",
+      "count_maps_2001_v4 has been downloaded successfully.\n",
+      "7\n",
+      "frequency_maps_2002_v4 has been downloaded successfully.\n",
+      "sum_maps_2002_v4 has been downloaded successfully.\n",
+      "count_maps_2002_v4 has been downloaded successfully.\n",
+      "7\n",
+      "frequency_maps_2003_v4 has been downloaded successfully.\n",
+      "sum_maps_2003_v4 has been downloaded successfully.\n",
+      "count_maps_2003_v4 has been downloaded successfully.\n",
       "mndwi\n",
-      "2019\n"
+      "annual_otsu_erosion_accretion_2001_v4 has been downloaded successfully.\n",
+      "mndwi\n",
+      "annual_otsu_erosion_accretion_2002_v4 has been downloaded successfully.\n",
+      "mndwi\n",
+      "annual_otsu_erosion_accretion_2003_v4 has been downloaded successfully.\n",
+      "mndwi\n",
+      "annual_otsu_erosion_accretion_2004_v4 has been downloaded successfully.\n",
+      "2001\n",
+      "water_annual\n",
+      "erosion_accretion_2001_v4 has been downloaded successfully.\n",
+      "2002\n",
+      "water_annual\n",
+      "erosion_accretion_2002_v4 has been downloaded successfully.\n",
+      "2003\n",
+      "water_annual\n",
+      "erosion_accretion_2003_v4 has been downloaded successfully.\n",
+      "mndwi\n",
+      "2000\n",
+      "annual_otsu_flood_extent_2001_v4 has been downloaded successfully.\n",
+      "mndwi\n",
+      "2001\n",
+      "annual_otsu_flood_extent_2002_v4 has been downloaded successfully.\n",
+      "mndwi\n",
+      "2002\n",
+      "annual_otsu_flood_extent_2003_v4 has been downloaded successfully.\n",
+      "mndwi\n",
+      "2003\n",
+      "annual_otsu_flood_extent_2004_v4 has been downloaded successfully.\n"
      ]
     }
    ],
    "source": [
-    "start     = 2019\n",
-    "end       = 2020\n",
+    "start     = 2000\n",
+    "end       = 2003\n",
     "band      ='mndwi'\n",
     "outputdir = 'C:/Users/fuentesm/CISNE/REACT/Maps/'\n",
     "\n",
     "downloadhydroperiodperyear(region,start,end,outputdir, band, 'v4')\n",
-    "# result = erotionacretion(region,start,end,band,outputdir, 'v4')\n",
+    "result = erotionacretion(region,start,end,band,outputdir, 'v4')\n",
     "df     = floodextension(region,start,end,band,outputdir, 'v4')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pixels</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Year</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01</th>\n",
-       "      <td>204148.058294</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-01</th>\n",
-       "      <td>216627.998223</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   Pixels\n",
-       "Year                     \n",
-       "2019-01-01  204148.058294\n",
-       "2020-01-01  216627.998223"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
@@ -322,66 +295,6 @@
    "outputs": [],
    "source": [
     "dff = df.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Pixels</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>204148.058294</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>216627.998223</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Year         Pixels\n",
-       "0  2019-01-01  204148.058294\n",
-       "1  2020-01-01  216627.998223"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dff"
    ]
   },
   {
@@ -471,6 +384,34 @@
     "\n",
     "chart.save(outputdir + \"/\" + \"v4\" + \"_GPP_daily.html\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
